--- a/app/globals.css
+++ b/app/globals.css
@@ -7,10 +7,10 @@
     --background: 0 0% 4%;
     --foreground: 210 40% 98%;
 
-    --card: 222.2 84% 4.9%;
+    --card: 0 0% 6.67%;
     --card-foreground: 210 40% 98%;
 
-    --popover: 222.2 84% 4.9%;
+    --popover: 0 0% 6.67%;
     --popover-foreground: 210 40% 98%;
 
     --primary: 210 40% 98%;
@@ -22,13 +22,13 @@
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 172.5, 75.68%, 14.51%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
+    --border: 0 0% 6.67%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
@@ -41,4 +41,29 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+::-moz-selection {
+  /* Code for Firefox */
+  background: #3ce7d2;
+}
+
+::selection {
+  background: #3ce7d2;
+}
+
+/* Scroll Customization */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #111111;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-color: #3ce7d2;
 }
